[package]
name = "pysyr-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "pysyrlib"
crate-type = ["cdylib"]

[dependencies]
num-format = { version = "0.4.3", features = ["with-num-bigint"] }
num-bigint = {version = "0.4.3", features = ["rand"]}
num-integer = "0.1.45"
num-traits = "0.2.15"
num = "0.4.0"


[dependencies.cpython]
version = "0.7.1"
features = ["extension-module"]
